Businesses and Ships Trade routes now working.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "universe-trader-6f8f2"
-  }
+    "default": "universe-trader-6f8f2",
+    "development": "universe-trader-dev"
+  },
+  "targets": {},
+  "etags": {}
 }
