--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,7 @@
             "namedChunks": true
           },
           "configurations": {
-            "production": {
+            "productionStrict": {
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -65,6 +65,29 @@
                 }
               ]
             },
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": false,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "10mb"
+                }
+              ]
+            },
             "ci": {
               "progress": false
             }
@@ -79,9 +102,7 @@
             "production": {
               "browserTarget": "app:build:production"
             },
-            "ci": {
-              "progress": false
-            }
+            "ci": {}
           }
         },
         "extract-i18n": {
