--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,10 @@
     {
       "files": ["*.html"],
       "extends": ["plugin:@angular-eslint/template/recommended"],
-      "rules": {}
+      "rules": {
+        "quotes": ["error", "double"],
+        "max-len": ["error", 200]
+      }
     }
   ]
 }
